Changelog
=========

1.0b2 (UNRELEASED)
-------------------

- Change user action name not to clash with Plone's
  [erral]

1.0b1 (2012/07/13)
-------------------

- Initial release
  [erral]