@@ -30,6 +30,7 @@ setup(name='cs.auth.twitter',
           'zope.i18nmessageid',
           'five.globalrequest',
           'collective.beaker',
+          'oauth2',
           'python-twitter',
           'Products.PluggableAuthService',
           'Products.PlonePAS',
